--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -129,7 +129,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -147,7 +147,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -318,7 +318,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -336,7 +336,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -507,7 +507,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -525,7 +525,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -674,7 +674,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -692,7 +692,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -929,7 +929,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -947,7 +947,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -1072,7 +1072,7 @@
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
                                             <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                            <ul class="circle">
+                                            <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
                                                 </li>
@@ -1090,7 +1090,7 @@
                                                 </li>
                                                 <div class="circle-mask2">
                                                     <div class="circle-mask2-text">
-                                                        <span style="font-size:1.3em;">50</span>
+                                                        <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                         <span style="font-size:1em;">원</span>
                                                     </div>
                                                 </div>
@@ -1196,7 +1196,7 @@
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
                                             <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                            <ul class="circle">
+                                            <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
                                                 </li>
@@ -1214,7 +1214,7 @@
                                                 </li>
                                                 <div class="circle-mask2">
                                                     <div class="circle-mask2-text">
-                                                        <span style="font-size:1.3em;">50</span>
+                                                        <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price}}</span>
                                                         <span style="font-size:1em;">원</span>
                                                     </div>
                                                 </div>
@@ -1310,38 +1310,5 @@
 
             </div>
         </div>
-        {#                <div class="dashboard-info">#}
-        {#                    <div class="dashboard-info-summary info-order-wish">#}
-        {#                        <div class="dashboard-info-summary-title">#}
-        {#                            출금가능#}
-        {#                        </div>#}
-        {#                        <div class="dashboard-info-summary-count">#}
-        {#                            <a href="{% url 'wish_list' %}" class="dashboard-info-img">#}
-        {#                                <img src="{% static 'img/influe_01.png' %}" style="margin-left: -5px;">#}
-        {#                            </a>#}
-        {#                        </div>#}
-        {#                    </div>#}
-        {#                    <div class="dashboard-info-summary info-order-cart">#}
-        {#                        <div class="dashboard-info-summary-title">#}
-        {#                            예상수익금#}
-        {#                        </div>#}
-        {#                        <div class="dashboard-info-summary-count">#}
-        {#                            <a href="{% url 'cart' %}" class="dashboard-info-img active">#}
-        {#                                <img src="{% static 'img/influe_02.png' %}" style="margin-left: -8px;">#}
-        {#                            </a>#}
-        {#                        </div>#}
-        {#                    </div>#}
-        {#                    <div class="dashboard-info-summary info-order-process">#}
-        {#                        <div class="dashboard-info-summary-title">#}
-        {#                            구매관리#}
-        {#                        </div>#}
-        {#                        <div class="dashboard-info-summary-count">#}
-        {#                            <a href="{% url 'purchase_list' %}" class="dashboard-info-img">#}
-        {#                                <img src="{% static 'img/influe_03.png' %}">#}
-        {#                            </a>#}
-        {#                        </div>#}
-        {#                    </div>#}
-        {#                </div>#}
-
     </div>
 {% endblock %}
