--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -102,7 +102,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -120,7 +120,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -312,7 +312,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -330,7 +330,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -522,7 +522,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -540,7 +540,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -709,7 +709,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -727,7 +727,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -848,7 +848,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -866,7 +866,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -981,7 +981,7 @@
                                         <div class="table_product_detail_left">
                                             <div class="circle-wrapper">
                                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                                <ul class="circle">
+                                                <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                     <li class="circle-list">
                                                         <div class="circle-text">1</div>
                                                     </li>
@@ -999,7 +999,7 @@
                                                     </li>
                                                     <div class="circle-mask2">
                                                         <div class="circle-mask2-text">
-                                                            <span style="font-size:1.3em;">50</span>
+                                                            <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                             <span style="font-size:1em;">원</span>
                                                         </div>
                                                     </div>
@@ -1100,7 +1100,7 @@
                                     <div class="table_product_detail_left">
                                         <div class="circle-wrapper">
                                             <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                            <ul class="circle">
+                                            <ul class="circle" gauge-data="{{ order_item.cart_item.item.socialup_gauge }}">
                                                 <li class="circle-list">
                                                     <div class="circle-text">1</div>
                                                 </li>
@@ -1118,7 +1118,7 @@
                                                 </li>
                                                 <div class="circle-mask2">
                                                     <div class="circle-mask2-text">
-                                                        <span style="font-size:1.3em;">50</span>
+                                                        <span style="font-size:1.3em;">{{ order_item.cart_item.item.unit_price }}</span>
                                                         <span style="font-size:1em;">원</span>
                                                     </div>
                                                 </div>
