--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -94,7 +94,7 @@
                         <div class="item_top_image" data-color="{{ item.sns_type_color }}">
                             <div class="circle-wrapper">
                                 <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                <ul class="circle">
+                                <ul class="circle" gauge-data="{{ item.socialup_gauge }}">
                                     <li class="circle-list">
                                         <div class="circle-text">1</div>
                                     </li>
@@ -112,7 +112,7 @@
                                     </li>
                                     <div class="circle-mask2">
                                         <div class="circle-mask2-text">
-                                            <span style="font-size:1.3em;">50</span>
+                                            <span style="font-size:1.3em;">{{ item.unit_price }}</span>
                                             <span style="font-size:1em;">원</span>
                                         </div>
                                     </div>
