--- a/static/css/dashboard/cart.css
+++ b/static/css/dashboard/cart.css
@@ -23,7 +23,7 @@
 
 .dashboard-cart .dashboard-cart-item .dashboard-cart-item-title {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 30px;
     vertical-align: top;
     margin-top: 10px;
     width: 300px;
@@ -412,6 +412,7 @@ li:nth-child(5) .circle-text {
 
 .dashboard-cart-btns-ul li:nth-child(1) input{
     width:60px;
+    cursor: pointer;
 }
 
 .dashboard-cart-btns-ul li:nth-child(2) {
@@ -423,6 +424,7 @@ li:nth-child(5) .circle-text {
 
 .dashboard-cart-btns-ul li:nth-child(2) input{
     background:none;
+    cursor: pointer;
 }
 
 /* dashboard-card-total */
