--- a/templates/account/dashboard_wishlist.html
+++ b/templates/account/dashboard_wishlist.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="circle-wrapper">
                                     <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                    <ul class="circle">
+                                    <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                         <li class="circle-list">
                                             <div class="circle-text">1</div>
                                         </li>
@@ -128,13 +128,13 @@
                                         </li>
                                         <div class="circle-mask2">
                                             <div class="circle-mask2-text">
-                                                <span style="font-size:1.3em;">50</span>
+                                                <span style="font-size:1.3em;">{{ product.unit_price }}</span>
                                                 <span style="font-size:1em;">원</span>
                                             </div>
                                         </div>
                                     </ul>
                                     <div class="cash">
-                                        <span class="cash-price" style="font-size:1.2em; color:grey;" data-price="{{ product.price }}">
+                                        <span class="cash-price" style="font-size:1em; color:grey;" data-price="{{ product.price }}">
                                            {{ product.price }}원
                                             {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
                                                 ~
@@ -180,7 +180,6 @@
                                         삭제하기
                                         </button>
                                     </form>
-
                                 </li>
                             </ul>
                         </div>
