--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,15 @@
             font-weight:300; }
     </style>
     {% block css %}{% endblock %}
+    <script src="/static/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('#contact_button').on('click', function () {
+                // 관리자 계정(또는 1:1상담 받을 계정)으로 연결. 2번째, 3번째, 4번째 파라미터를 관리자 계정 정보로 넣고 주석 해제하기
+                // startMessage('{{ user.id }}', $(this).data('id'), $(this).data('name'), $(this).data('profile'));
+            });
+        });
+    </script>
 </head>
 <body>
     {% include 'header.html' %}
@@ -40,7 +49,7 @@
             고객센터
         </div>
         <div class="contact-drop-down" style="display:none;">
-            <a href="{% url 'contact' %}">1:1 문의</a>
+            <a id="contact_button">1:1 문의</a>
             <a href="{% url 'dashboard' %}">신고하기</a>
         </div>
     </div>
