--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -143,6 +143,10 @@
     color: #e8e8e8;
 }
 
+.detail_content_wrapper_mid .detail_content_mid_left .seller-rating .fa {
+    color: #FEDD43;
+}
+
 .detail_content_wrapper_mid .detail_content_mid_right{
     display: block;
     float:right;
