--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     {% include 'header.html' %}
-
+    {% block jumbotron %}{% endblock %}
     <div style="margin-bottom: 120px;">
     {% block content %}{% endblock %}
     </div>
