--- a/templates/charge/charge_success.html
+++ b/templates/charge/charge_success.html
@@ -13,7 +13,7 @@
         <div class="dashboard-billing result">
             <h1>충전이 완료되었습니다.</h1>
             <p>소셜업을 이용해 주셔서 감사합니다.</p>
-            <a>상품 보러가기</a>
+            <a href="/">상품 보러가기</a>
         </div>
     </div>
 {% endblock %}
