product_upload part confirm modal

--- a/static/css/product.css
+++ b/static/css/product.css
@@ -1231,3 +1231,60 @@ input::-webkit-input-placeholder {
 .previous_record select:focus {
     outline: none;
 }
+
+/* modal */
+
+/* upload-confirm-modal */
+.upload-confirm-modal{
+    display: none;
+    width:30%;
+    height:250px;
+    position:absolute;
+    left:35%;
+    top:50%;
+    border:1px solid black;
+    z-index: 3;
+    background-color: white;
+    text-align:center;
+}
+
+.upload-confirm-modal .upload-confirm-modal-btn-close{
+    float:right;
+    width:5%;
+    background: none;
+    margin-top:5%;
+    margin-right:8%;
+}
+
+.upload-confirm-modal .upload-confirm-modal-title{
+    padding-top:6%;
+    width:86%;
+    border-bottom:1px solid black;
+    margin-left:7%;
+    text-align:left;
+    height:13%;
+    font-weight:bold;
+}
+
+.upload-confirm-modal .upload-confirm-modal-content{
+    margin-top:8%;
+    font-size:18px;
+}
+
+.upload-confirm-modal .upload-confirm-modal-btns{
+    margin-top:6%;
+}
+
+.upload-confirm-modal .upload-confirm-modal-btns .upload-confirm-modal-btn{
+    width:85px;
+    height:33px;
+    background-color:white;
+    border-radius:3px;
+    border:1px solid #cecece;
+}
+
+.upload-confirm-modal .upload-confirm-modal-btns .upload-confirm-modal-btn.yes{
+    background-color:#648efc;
+    border:1px solid #648efc;
+    color:white;
+}
