make disable for inputs when modal showed (product_upload)

--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -279,7 +279,7 @@
 
             <br>
 
-            <div class="upload-confirm-modal">
+            <div class="upload-confirm-modal" data-backdrop="static"  data-keyboard="false">
                 <div class="upload-confirm-modal-title">승인완료</div>
                 <div class="upload-confirm-modal-content">
                     승인 요청이 완료됩니다.<br>1~2일 내 게시물이 등록됩니다.
